-Bugfix: Another crash bug.