@@ -32,7 +32,7 @@ apply plugin: "curseforge"
 project.ext {
 	massive = "1"
     major = "1"
-    minor = "8"
+    minor = "9"
     mcVersion = "1.7.10"
 }
 
