@@ -1,1 +1,5 @@
--Bugfix: Another crash bug.
+-Added 'setAlpha(double)' to LocatedTexture to allow for textures with.. you guessed it, alpha.
+-Added config option to disable the auto-scaling to GUI scale AUTO when having the IGW GUI open.
+
+-Bugfix: Crash when pressing 'i' when looking at an entity which doesn't have info.
+-Bugfix: You can only have one [variable] command one a line.
